Black.Beard.BusinessRule.Parsers/Grammar/BusinessRuleParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from BusinessRuleParser.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Bb.BusinessRule.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class BusinessRuleParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		CONST=1, DATA=2, DAY=3, DECLARE=4, DESCRIPTION=5, ELSE=6, EVENT=7, FUNCTION=8, 
		HOUR=9, LOAD=10, MATCHING=11, MINUTE=12, NAME=13, RETURN=14, WHEN=15, 
		CHAR_STRING=16, CHAR_COMMENT=17, LEFT_PAREN=18, LEFT_BRACKET=19, RIGHT_PAREN=20, 
		RIGHT_BRACKET=21, SEMICOLON=22, COMMA=23, PLUS=24, MINUS=25, TIME=26, 
		DOT=27, DIVID=28, NOT=29, EQUAL=30, MODULO=31, POWER=32, NOT_EQUAL=33, 
		GREATER=34, GREATER_OR_EQUAL=35, LESS=36, LESS_OR_EQUAL=37, XOR=38, OR=39, 
		AND=40, ANDALSO=41, SPACES=42, NUMBER=43, SINGLE_LINE_COMMENT=44, MULTI_LINE_COMMENT=45, 
		REGULAR_ID=46;
	public const int
		RULE_script = 0, RULE_declare_constants = 1, RULE_declare_constant = 2, 
		RULE_matchings = 3, RULE_matching = 4, RULE_unit_statement = 5, RULE_load_data = 6, 
		RULE_function = 7, RULE_parameters = 8, RULE_parameter = 9, RULE_rule = 10, 
		RULE_result = 11, RULE_action = 12, RULE_expre = 13, RULE_expre_action = 14, 
		RULE_arguments = 15, RULE_argument = 16, RULE_operation = 17, RULE_comparer = 18, 
		RULE_identifiers = 19, RULE_identifier = 20, RULE_comment = 21, RULE_constant = 22, 
		RULE_number = 23, RULE_integer = 24, RULE_float = 25, RULE_delay = 26, 
		RULE_string = 27;
	public static readonly string[] ruleNames = {
		"script", "declare_constants", "declare_constant", "matchings", "matching", 
		"unit_statement", "load_data", "function", "parameters", "parameter", 
		"rule", "result", "action", "expre", "expre_action", "arguments", "argument", 
		"operation", "comparer", "identifiers", "identifier", "comment", "constant", 
		"number", "integer", "float", "delay", "string"
	};

	private static readonly string[] _LiteralNames = {
		null, "'CONST'", "'DATA'", "'DAY'", "'DECLARE'", "'DESCRIPTION'", "'ELSE'", 
		"'EVENT'", "'FUNCTION'", "'HOUR'", "'LOAD'", "'MATCHING'", "'MINUTE'", 
		"'NAME'", "'RETURN'", "'WHEN'", null, null, "'('", "'['", "')'", "']'", 
		"';'", "','", "'+'", "'-'", "'*'", "'.'", "'\\'", "'!'", "'='", "'%'", 
		"'^'", "'!='", "'>'", "'>='", "'<'", "'<='", "'||'", "'|'", "'&'", "'&&'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "CONST", "DATA", "DAY", "DECLARE", "DESCRIPTION", "ELSE", "EVENT", 
		"FUNCTION", "HOUR", "LOAD", "MATCHING", "MINUTE", "NAME", "RETURN", "WHEN", 
		"CHAR_STRING", "CHAR_COMMENT", "LEFT_PAREN", "LEFT_BRACKET", "RIGHT_PAREN", 
		"RIGHT_BRACKET", "SEMICOLON", "COMMA", "PLUS", "MINUS", "TIME", "DOT", 
		"DIVID", "NOT", "EQUAL", "MODULO", "POWER", "NOT_EQUAL", "GREATER", "GREATER_OR_EQUAL", 
		"LESS", "LESS_OR_EQUAL", "XOR", "OR", "AND", "ANDALSO", "SPACES", "NUMBER", 
		"SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "REGULAR_ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "BusinessRuleParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static BusinessRuleParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public BusinessRuleParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public BusinessRuleParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ScriptContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(BusinessRuleParser.NAME, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode EVENT() { return GetToken(BusinessRuleParser.EVENT, 0); }
		public ITerminalNode CHAR_STRING() { return GetToken(BusinessRuleParser.CHAR_STRING, 0); }
		public ITerminalNode Eof() { return GetToken(BusinessRuleParser.Eof, 0); }
		public ITerminalNode DESCRIPTION() { return GetToken(BusinessRuleParser.DESCRIPTION, 0); }
		public CommentContext comment() {
			return GetRuleContext<CommentContext>(0);
		}
		public ITerminalNode MATCHING() { return GetToken(BusinessRuleParser.MATCHING, 0); }
		public Declare_constantsContext declare_constants() {
			return GetRuleContext<Declare_constantsContext>(0);
		}
		public Unit_statementContext[] unit_statement() {
			return GetRuleContexts<Unit_statementContext>();
		}
		public Unit_statementContext unit_statement(int i) {
			return GetRuleContext<Unit_statementContext>(i);
		}
		public ITerminalNode[] SEMICOLON() { return GetTokens(BusinessRuleParser.SEMICOLON); }
		public ITerminalNode SEMICOLON(int i) {
			return GetToken(BusinessRuleParser.SEMICOLON, i);
		}
		public MatchingsContext[] matchings() {
			return GetRuleContexts<MatchingsContext>();
		}
		public MatchingsContext matchings(int i) {
			return GetRuleContext<MatchingsContext>(i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_script; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBusinessRuleParserVisitor<TResult> typedVisitor = visitor as IBusinessRuleParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScript(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScriptContext script() {
		ScriptContext _localctx = new ScriptContext(Context, State);
		EnterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; Match(NAME);
			State = 57; identifier();
			State = 60;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==DESCRIPTION) {
				{
				State = 58; Match(DESCRIPTION);
				State = 59; comment();
				}
			}

			State = 62; Match(EVENT);
			State = 63; Match(CHAR_STRING);
			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==MATCHING) {
				{
				State = 64; Match(MATCHING);
				State = 66;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 65; matchings();
					}
					}
					State = 68;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==LEFT_PAREN );
				}
			}

			State = 73;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==DECLARE) {
				{
				State = 72; declare_constants();
				}
			}

			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LOAD || _la==WHEN) {
				{
				{
				State = 75; unit_statement();
				State = 76; Match(SEMICOLON);
				}
				}
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 83; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Declare_constantsContext : ParserRuleContext {
		public ITerminalNode DECLARE() { return GetToken(BusinessRuleParser.DECLARE, 0); }
		public Declare_constantContext[] declare_constant() {
			return GetRuleContexts<Declare_constantContext>();
		}
		public Declare_constantContext declare_constant(int i) {
			return GetRuleContext<Declare_constantContext>(i);
		}
		public Declare_constantsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declare_constants; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBusinessRuleParserVisitor<TResult> typedVisitor = visitor as IBusinessRuleParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclare_constants(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Declare_constantsContext declare_constants() {
		Declare_constantsContext _localctx = new Declare_constantsContext(Context, State);
		EnterRule(_localctx, 2, RULE_declare_constants);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(DECLARE);
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 86; declare_constant();
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==CONST );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Declare_constantContext : ParserRuleContext {
		public ITerminalNode CONST() { return GetToken(BusinessRuleParser.CONST, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode EQUAL() { return GetToken(BusinessRuleParser.EQUAL, 0); }
		public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		public CommentContext comment() {
			return GetRuleContext<CommentContext>(0);
		}
		public Declare_constantContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declare_constant; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBusinessRuleParserVisitor<TResult> typedVisitor = visitor as IBusinessRuleParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclare_constant(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Declare_constantContext declare_constant() {
		Declare_constantContext _localctx = new Declare_constantContext(Context, State);
		EnterRule(_localctx, 4, RULE_declare_constant);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91; Match(CONST);
			State = 92; identifier();
			State = 93; Match(EQUAL);
			State = 94; constant();
			State = 95; comment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MatchingsContext : ParserRuleContext {
		public ITerminalNode[] LEFT_PAREN() { return GetTokens(BusinessRuleParser.LEFT_PAREN); }
		public ITerminalNode LEFT_PAREN(int i) {
			return GetToken(BusinessRuleParser.LEFT_PAREN, i);
		}
		public MatchingContext[] matching() {
			return GetRuleContexts<MatchingContext>();
		}
		public MatchingContext matching(int i) {
			return GetRuleContext<MatchingContext>(i);
		}
		public ITerminalNode[] RIGHT_PAREN() { return GetTokens(BusinessRuleParser.RIGHT_PAREN); }
		public ITerminalNode RIGHT_PAREN(int i) {
			return GetToken(BusinessRuleParser.RIGHT_PAREN, i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(BusinessRuleParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(BusinessRuleParser.COMMA, i);
		}
		public MatchingsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_matchings; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBusinessRuleParserVisitor<TResult> typedVisitor = visitor as IBusinessRuleParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMatchings(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MatchingsContext matchings() {
		MatchingsContext _localctx = new MatchingsContext(Context, State);
		EnterRule(_localctx, 6, RULE_matchings);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; Match(LEFT_PAREN);
			State = 98; matching();
			State = 99; Match(RIGHT_PAREN);
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 100; Match(COMMA);
				State = 101; Match(LEFT_PAREN);
				State = 102; matching();
				State = 103; Match(RIGHT_PAREN);
				}
				}
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MatchingContext : ParserRuleContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode EQUAL() { return GetToken(BusinessRuleParser.EQUAL, 0); }
		public ITerminalNode CHAR_STRING() { return GetToken(BusinessRuleParser.CHAR_STRING, 0); }
		public MatchingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_matching; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBusinessRuleParserVisitor<TResult> typedVisitor = visitor as IBusinessRuleParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMatching(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MatchingContext matching() {
		MatchingContext _localctx = new MatchingContext(Context, State);
		EnterRule(_localctx, 8, RULE_matching);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110; identifier();
			State = 111; Match(EQUAL);
			State = 112; Match(CHAR_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Unit_statementContext : ParserRuleContext {
		public RuleContext rule() {
			return GetRuleContext<RuleContext>(0);
		}
		public Load_dataContext load_data() {
			return GetRuleContext<Load_dataContext>(0);
		}
		public Unit_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unit_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBusinessRuleParserVisitor<TResult> typedVisitor = visitor as IBusinessRuleParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnit_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Unit_statementContext unit_statement() {
		Unit_statementContext _localctx = new Unit_statementContext(Context, State);
		EnterRule(_localctx, 10, RULE_unit_statement);
		try {
			State = 116;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case WHEN:
				EnterOuterAlt(_localctx, 1);
				{
				State = 114; rule();
				}
				break;
			case LOAD:
				EnterOuterAlt(_localctx, 2);
				{
				State = 115; load_data();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Load_dataContext : ParserRuleContext {
		public ITerminalNode LOAD() { return GetToken(BusinessRuleParser.LOAD, 0); }
		public ITerminalNode DATA() { return GetToken(BusinessRuleParser.DATA, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode LEFT_PAREN() { return GetToken(BusinessRuleParser.LEFT_PAREN, 0); }
		public ITerminalNode RIGHT_PAREN() { return GetToken(BusinessRuleParser.RIGHT_PAREN, 0); }
		public ArgumentsContext arguments() {
			return GetRuleContext<ArgumentsContext>(0);
		}
		public Load_dataContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_load_data; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBusinessRuleParserVisitor<TResult> typedVisitor = visitor as IBusinessRuleParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoad_data(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Load_dataContext load_data() {
		Load_dataContext _localctx = new Load_dataContext(Context, State);
		EnterRule(_localctx, 12, RULE_load_data);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118; Match(LOAD);
			State = 119; Match(DATA);
			State = 120; identifier();
			State = 121; Match(LEFT_PAREN);
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHAR_STRING) | (1L << PLUS) | (1L << MINUS) | (1L << NUMBER) | (1L << REGULAR_ID))) != 0)) {
				{
				State = 122; arguments();
				}
			}

			State = 125; Match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionContext : ParserRuleContext {
		public ITerminalNode FUNCTION() { return GetToken(BusinessRuleParser.FUNCTION, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode LEFT_PAREN() { return GetToken(BusinessRuleParser.LEFT_PAREN, 0); }
		public ITerminalNode RIGHT_PAREN() { return GetToken(BusinessRuleParser.RIGHT_PAREN, 0); }
		public ParametersContext parameters() {
			return GetRuleContext<ParametersContext>(0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBusinessRuleParserVisitor<TResult> typedVisitor = visitor as IBusinessRuleParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(Context, State);
		EnterRule(_localctx, 14, RULE_function);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127; Match(FUNCTION);
			State = 128; identifier();
			State = 129; Match(LEFT_PAREN);
			State = 131;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==CHAR_STRING || _la==REGULAR_ID) {
				{
				State = 130; parameters();
				}
			}

			State = 133; Match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParametersContext : ParserRuleContext {
		public ParameterContext[] parameter() {
			return GetRuleContexts<ParameterContext>();
		}
		public ParameterContext parameter(int i) {
			return GetRuleContext<ParameterContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(BusinessRuleParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(BusinessRuleParser.COMMA, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameters; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBusinessRuleParserVisitor<TResult> typedVisitor = visitor as IBusinessRuleParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameters(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParametersContext parameters() {
		ParametersContext _localctx = new ParametersContext(Context, State);
		EnterRule(_localctx, 16, RULE_parameters);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135; parameter();
			State = 140;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 136; Match(COMMA);
				State = 137; parameter();
				}
				}
				State = 142;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterContext : ParserRuleContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameter; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBusinessRuleParserVisitor<TResult> typedVisitor = visitor as IBusinessRuleParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParameterContext parameter() {
		ParameterContext _localctx = new ParameterContext(Context, State);
		EnterRule(_localctx, 18, RULE_parameter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 143; identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RuleContext : ParserRuleContext {
		public ResultContext thenResult;
		public RuleContext elseRule;
		public ITerminalNode WHEN() { return GetToken(BusinessRuleParser.WHEN, 0); }
		public Expre_actionContext expre_action() {
			return GetRuleContext<Expre_actionContext>(0);
		}
		public ITerminalNode ELSE() { return GetToken(BusinessRuleParser.ELSE, 0); }
		public ResultContext[] result() {
			return GetRuleContexts<ResultContext>();
		}
		public ResultContext result(int i) {
			return GetRuleContext<ResultContext>(i);
		}
		public RuleContext rule() {
			return GetRuleContext<RuleContext>(0);
		}
		public RuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBusinessRuleParserVisitor<TResult> typedVisitor = visitor as IBusinessRuleParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RuleContext rule() {
		RuleContext _localctx = new RuleContext(Context, State);
		EnterRule(_localctx, 20, RULE_rule);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145; Match(WHEN);
			State = 146; expre_action();
			State = 148;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 147; _localctx.thenResult = result();
				}
				}
				State = 150;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==RETURN );
			State = 154;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ELSE) {
				{
				State = 152; Match(ELSE);
				State = 153; _localctx.elseRule = rule();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ResultContext : ParserRuleContext {
		public ITerminalNode RETURN() { return GetToken(BusinessRuleParser.RETURN, 0); }
		public ITerminalNode EVENT() { return GetToken(BusinessRuleParser.EVENT, 0); }
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public ResultContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_result; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBusinessRuleParserVisitor<TResult> typedVisitor = visitor as IBusinessRuleParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitResult(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ResultContext result() {
		ResultContext _localctx = new ResultContext(Context, State);
		EnterRule(_localctx, 22, RULE_result);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 156; Match(RETURN);
			State = 157; Match(EVENT);
			State = 158; identifier();
			State = 159; identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionContext : ParserRuleContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode LEFT_PAREN() { return GetToken(BusinessRuleParser.LEFT_PAREN, 0); }
		public ITerminalNode RIGHT_PAREN() { return GetToken(BusinessRuleParser.RIGHT_PAREN, 0); }
		public ArgumentsContext arguments() {
			return GetRuleContext<ArgumentsContext>(0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_action; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBusinessRuleParserVisitor<TResult> typedVisitor = visitor as IBusinessRuleParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAction(this);
			else return visitor.VisitChildren(this);
		}
	}
